[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kuro.py"
version = "0.7.1"
description = "Async API wrapper for KuroBBS written in Python."
authors = [{ name = "JokelBaf", email = "jokelbaf@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "GPL-3.0"
maintainers = [
    { name = "JokelBaf", email = "jokelbaf@gmail.com" },
    { name = "seriaati", email = "seria.ati@gmail.com" },
]
keywords = [
    "kuro",
    "wuwa",
    "api",
    "wraper",
    "kurobbs",
]
dependencies = [
    "pydantic>=2.12.5",
    "aiohttp>=3.8.4",
]

[project.optional-dependencies]
caching = ["aiocache"]
test = [
    "pytest",
    "python-dotenv",
    "pytest-asyncio",
]

[project.urls]
Homepage = "https://github.com/Wuthery/kuro.py"
Repository = "https://github.com/Wuthery/kuro.py"
Documentation = "https://github.com/Wuthery/kuro.py"

[dependency-groups]
dev = [
    "pre-commit>=4.0.0,<5",
    "ruff>=0.14,<0.15",
]
test = [
    "pytest>=9,<10",
    "python-dotenv>=1.0.1,<2",
    "pytest-asyncio>=1.0.0,<2",
]

[tool.uv]
default-groups = [
    "dev",
    "test",
]

[tool.hatch.build.targets.sdist]
include = ["kuro"]

[tool.hatch.build.targets.wheel]
include = ["kuro"]

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
asyncio_mode = "auto"
pythonpath = [
  "."
]
